<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:tools="http://schemas.android.com/tools"
             android:background="@color/colorPrimaryLight">

    <ImageView
        android:layout_width="290dp"
        android:layout_height="169dp"
        android:id="@+id/theShape"
        android:layout_gravity="center"
        tools:src="@drawable/rectangle"
        android:contentDescription="@string/shape"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/height"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="start|center_vertical"
        android:hint="@string/height"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/width"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="50dp"
        android:hint="@string/width"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/area"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="20dp"
        tools:text="Area formula"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="Large Text"
        android:id="@+id/answer1"
        android:layout_gravity="end|top"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="Large Text"
        android:id="@+id/answer2"
        android:layout_gravity="end|center_vertical"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        tools:text="Large Text"
        android:id="@+id/answer3"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginEnd="25dp"/>
</FrameLayout>